# rust-mule

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY_REVIEW.md  config.toml  handoff.md  package.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
docs/: API_DESIGN.md  BEHAVIOURAL_CONTRACT.md  DOWNLOAD_DESIGN.md  IMULE_COMPABILITY_TIMING.md  KAD_WIRE_REFACTOR_PLAN.md  README.md  REVIEWERS_CHECKLIST.md  RUST-MULE_ROUTING_PHILOSOPHY.md  TASKS.md  TODO.md  UI_DESIGN.md  api_curl.md  architecture.md  dev.md  handoff.md  index.md  kad_parity.md  ui_api_contract_map.md
docs/public/: CNAME
docs/scripts/: build_linux_release.sh  debug_lookup_once.sh  debug_probe_peer.sh  debug_routing_buckets.sh  debug_routing_nodes.sh  debug_routing_summary.sh  dev_auth.sh  events.sh  health.sh  kad_keyword_results_get.sh  kad_peers_get.sh  kad_publish_keyword.sh  kad_publish_source.sh  kad_search_keyword.sh  kad_search_sources.sh  kad_sources_get.sh  rust_mule_soak.sh  soak_triage.sh  status.sh  two_instance_dht_selftest.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: kad_packed.rs  kad_wire.rs
scripts/docs/: README.md  auth_bootstrap.sh  debug_lookup_once.sh  events.sh  (+15 more)
site/: package.json
src/: app.rs  config.rs  config_io.rs  kad.rs  lib.rs  logging.rs  main.rs  single_instance.rs
tests/: api_startup_smoke.rs
ui/: .editorconfig  .prettierignore  index.html  log.html  node_stats.html  package-lock.json  package.json  playwright.config.mjs  search.html  search_details.html  settings.html
(+98 files in other folders)
