[package]
name = "rust-mule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde =  { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
