[package]
name = "rust-mule-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rust-mule = { path = ".." }

[[bin]]
name = "kad_wire"
path = "fuzz_targets/kad_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kad_packed"
path = "fuzz_targets/kad_packed.rs"
test = false
doc = false
bench = false
